[package]
name = "helloraytracer"
version = "0.1.0"
authors = ["Vesa Vilhonen <vesa@vilhonen.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
gif = "0.10.2"
log = "0.4.8"
minifb = "0.11.2"
png = "0.14.1"
pretty_env_logger = "0.3.0"
rand_distr = "0.2.1"
rand = "0.7.0"
rayon = "1.1.0"
structopt = "0.2.18"